base/services.yaml
# --- FRONTEND ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: mablinov2704/frontend:latest
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80

# --- BFF ---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
spec:
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
    spec:
      containers:
        - name: bff
          image: mablinov2704/bff:latest
---
apiVersion: v1
kind: Service
metadata:
  name: bff
spec:
  selector:
    app: bff
  ports:
    - port: 8080

# --- USER SERVICE ---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: mablinov2704/user-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - port: 8081

# --- MESSAGE SERVICE ---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
spec:
  selector:
    matchLabels:
      app: message-service
  template:
    metadata:
      labels:
        app: message-service
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: workload
                    operator: In
                    values: ["app"]
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: disk
                    operator: In
                    values: ["fast"]
      containers:
        - name: message-service
          image: mablinov2704/message-service:latest
          volumeMounts:
            - name: s3-data
              mountPath: /app/uploads
      volumes:
        - name: s3-data
          persistentVolumeClaim:
            claimName: s3-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: message-service
spec:
  selector:
    app: message-service
  ports:
    - port: 8082
